test/sema/exercise/assignment_lhs_error.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn main(): void {
  s.f = y;
  // CHECK: [[# @LINE - 1 ]]:9: error: symbol 'y' not found
}
